--- a/scheduleMaker/package.json
+++ b/scheduleMaker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schedulemaker",
+  "name": "scheduler",
   "version": "1.0.0",
   "description": "",
   "main": "scheduleFuncs.js",
@@ -15,9 +15,9 @@
     "daisyui": "^4.7.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2",
-    "nodemon": "^3.0.3",
-    "path": "^0.12.7",
+    "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.4.1"
   }
 }
