--- a/scheduleMaker/package.json
+++ b/scheduleMaker/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.7.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "nodemon": "^3.0.3"
   },
   "devDependencies": {
