Schedule maker css updated

--- a/scheduleMaker/package.json
+++ b/scheduleMaker/package.json
@@ -5,7 +5,7 @@
   "main": "scheduleFuncs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "author": "",
